# py-src-dir-layout

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test.txt  tox.ini
src/rocket_science/: hello.py
tests/: __init__.py  test_hello.py
tests/test_py_src_dir_layout/: test_hello.py
