[tool.black]
line-length=100
include ='\.pyi?$'

[tool.poetry]
name = "py-src-dir-layout"
version = "0.1.0"
description = "A py-src-dir-layout example project"
authors = ["Cellebyte <marcel@fest4.eu>"]
license = "MIT"
readme = 'README.md'

include = ["test_include.txt"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.1"
tox = "^3.21.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
